--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,34 +5,50 @@ export(AutoScanningCoxPH)
 export(AutoScanningMultiClass)
 export(DADA2Adapter)
 export(FeatureProperty)
+export(GSEATest)
+export(GSEATestwithFC)
+export(GetKOInfo)
 export(GetPrevalence)
 export(LambdaDecision)
 export(LambdaTuning)
+export(LambdaTuningCoxPH)
+export(LambdaTuningCoxPHParallel)
 export(LambdaTuningMultiClass)
 export(LambdaTuningMultiClassParallel)
 export(LambdaTuningParallel)
 export(PreLect)
 export(PreLectCoxPH)
 export(PreLectMultiClass)
+export(TaxaProperty)
 export(TrainTextSplit)
 export(evaluation)
+export(generatePermutedTable)
+export(generatePermutedTableContinuous)
+export(permutatedTest)
 import(patchwork)
 import(rpart)
+importFrom(KEGGREST,keggGet)
 importFrom(PRROC,pr.curve)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
 importFrom(matrixStats,rowVars)
 importFrom(pROC,auc)
