--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(LambdaTuningCoxPHParallel)
 export(LambdaTuningMultiClass)
 export(LambdaTuningMultiClassParallel)
 export(LambdaTuningParallel)
+export(PathwayEnrichment)
 export(PreLect)
 export(PreLectCoxPH)
 export(PreLectMultiClass)
